--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,80 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+.arrowButton {
+  width: 60px;
+  height: 60px;
+  margin: 5px;
+  border: 0;
+  background-color: silver;
+}
+
+.arrow {
+  border: solid black;
+  border-width: 0 8px 8px 0;
+  display: inline-block;
+  padding: 10px 10px 10px 10px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  margin-right: 10px;
+  margin-top: 5px;
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  margin-bottom: -15px;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  margin-bottom: 5px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-main {
+  position: fixed;
+  background: white;
+  width: 300px;
+  height: auto;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+* {
+  font-family: "Orbitron", sans-serif;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+.score {
+  font-size: 30px;
 }
